--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "axios": "^1.7.9",
+    "eas-cli": "^14.2.0",
     "expo": "~52.0.23",
     "expo-constants": "^17.0.3",
     "expo-linking": "^7.0.3",
     "expo-router": "^4.0.15",
     "expo-status-bar": "^2.0.0",
+    "global": "^4.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-web": "^0.19.13",
+    "react-native-webview": "^13.12.5",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
