--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/material-top-tabs": "^7.1.0",
     "axios": "^1.7.9",
     "eas-cli": "^14.2.0",
     "expo": "~52.0.23",
@@ -21,9 +22,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "^0.19.13",
     "react-native-webview": "^13.12.5",
     "react-native-youtube": "^2.0.2",
