--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "eas-cli": "^14.2.0",
     "expo": "~52.0.23",
+    "expo-av": "^15.0.2",
     "expo-constants": "^17.0.3",
     "expo-linking": "^7.0.3",
     "expo-router": "^4.0.15",
